<Reports>Reports Alignment Fixed for IE & Firefox browsers.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5758,7 +5758,7 @@ ul.browserInlineIcons
 {
     width: 99%;
     float:left;
-    height: 90%;
+    /* height: 90%; */
 }
 .getScenarioTestCaseDetails td,.reportHeaders thead tr th,.executionTimeDetails td
 {
