--- a/public/css/scroll.css
+++ b/public/css/scroll.css
@@ -616,7 +616,7 @@
     position: absolute !important;
     float: left;
     width: 100%;
-    height: 100%;
+    height: 300px !important;
     max-height: 300px !important;
     overflow-x: hidden;
 }
@@ -643,7 +643,7 @@
     position: absolute !important;
     float: left;
     width: 100%;
-    height: 100%;
+    height: 212px !important;
     max-height: 212px !important;
     overflow-x: hidden;
 }
